// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package google.cloud.dialogflow.v2beta1;

import "google/api/field_behavior.proto";
import "google/api/resource.proto";

option csharp_namespace = "Google.Cloud.Dialogflow.V2Beta1";
option go_package = "cloud.google.com/go/dialogflow/apiv2beta1/dialogflowpb;dialogflowpb";
option java_multiple_files = true;
option java_outer_classname = "OperationsProto";
option java_package = "com.google.cloud.dialogflow.v2beta1";
option objc_class_prefix = "DF";

// Metadata for a
// [GeneratorEvaluations.CreateGeneratorEvaluation][google.cloud.dialogflow.v2beta1.GeneratorEvaluations.CreateGeneratorEvaluation]
// operation.
message GeneratorEvaluationOperationMetadata {
  // Output only. The resource name of the generator evaluation. Format:
  // `projects/<Project ID>/locations/<Location
  // ID>/generators/<Generator ID>/evaluations/<Evaluation ID>`
  string generator_evaluation = 1 [(google.api.field_behavior) = OUTPUT_ONLY];
}
